demo/yamls/bgd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: bgd
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
---
