demo/yamls/bgd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: bgd
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd.apps.westpac.stp-lab.org"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
